package automation;


import io.grpc.stub.StreamObserver;

public class IQHavenServiceImpl extends AutomationServiceGrpc.AutomationServiceImplBase{

    // Implementações para AutomationService
    @Override
    public void toggleDevice(Automation.ToggleDeviceRequest request, StreamObserver<Automation.ToggleDeviceResponse> responseObserver) {
        // Implementação do toggleDevice
        Automation.ToggleDeviceResponse response = Automation.ToggleDeviceResponse.newBuilder()
                .setSuccess(true)
                .setMessage("Device " + request.getDeviceId() + " toggled to " + request.getTurnOn())
                .build();
        responseObserver.onNext(response);
        responseObserver.onCompleted();
    }

    @Override
    public void setSchedule(Automation.SetScheduleRequest request, StreamObserver<Automation.SetScheduleResponse> responseObserver) {
        // Implementação do setSchedule
        Automation.SetScheduleResponse response = Automation.SetScheduleResponse.newBuilder()
                .setSuccess(true)
                .setMessage("Schedule set for device " + request.getDeviceId() + " at " + request.getScheduleTime())
                .build();
        responseObserver.onNext(response);
        responseObserver.onCompleted();
    }

    @Override
    public void streamDeviceStatus(Automation.StreamDeviceStatusRequest request, StreamObserver<Automation.DeviceStatusResponse> responseObserver) {
        // Implementação do streamDeviceStatus (server streaming)
        for (int i = 0; i < 5; i++) {
            Automation.DeviceStatusResponse response = Automation.DeviceStatusResponse.newBuilder()
                    .setStatus("Status update " + i + " for device " + request.getDeviceId())
                    .setTimestamp(String.valueOf(System.currentTimeMillis()))
                    .build();
            responseObserver.onNext(response);
            try {
                Thread.sleep(1000);
            } catch (InterruptedException e) {
                e.printStackTrace();
            }
        }
        responseObserver.onCompleted();
    }

    // Implementações para EnergyService

    public void optimizeEnergy(Energy.OptimizeEnergyRequest request, StreamObserver<Energy.OptimizeEnergyResponse> responseObserver) {
        // Implementação do optimizeEnergy
        Energy.OptimizeEnergyResponse response = Energy.OptimizeEnergyResponse.newBuilder()
                .setSuccess(true)
                .setMessage("Energy optimization suggestion received for device " + request.getDeviceId())
                .build();
        responseObserver.onNext(response);
        responseObserver.onCompleted();
    }

    // Implementações para SecurityService

    public void toggleAlarm(Security.ToggleAlarmRequest request, StreamObserver<Security.ToggleAlarmResponse> responseObserver) {
        // Implementação do toggleAlarm
        Security.ToggleAlarmResponse response = Security.ToggleAlarmResponse.newBuilder()
                .setSuccess(true)
                .setMessage("Alarm " + (request.getActivate() ? "activated" : "deactivated"))
                .build();
        responseObserver.onNext(response);
        responseObserver.onCompleted();
    }

    // Adicione aqui as outras implementações necessárias...
}
